--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 
 	<!-- title for the page -->
-	<title>Widgets-R-Us</title>
+	<title>Dawg Pizza</title>
 
 	<!-- REPLACE 'your uw net id' with your UW net id -->
 	<meta name="author" content="1124687">
@@ -18,10 +18,21 @@
 </head>
 <body>
 
-	<header class="header_content">
-		<img src="img/logo.png"	alt="Our logo"	class="logo">
-		
+	<header>
+		<img src="img/logo.png"	alt="Our logo" class="logo">
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="menu.html">Menu</a></li>
+				<li><a href="about.html">About Us</a></li>
+			</ul>
+		</nav>
 	</header>
+
+	<article>
+		
+
+	</article>
 
 </body>
 </html>
