index and menu pages complete. about page started.

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <DOCTYPE html>
-<html class="body">
+<html>
 <head>
 		<!-- tells the browser this file was saved in the UTF-8 character encoding -->
 	<meta charset="UTF-8">
@@ -16,7 +16,7 @@
 	<!-- favicon -->
 	<!-- <link rel="shortcut icon" href="img/logo-small.png">	 -->
 </head>
-<body id="homePage">
+<body id="aboutpage">
 
 	<header>
 
@@ -33,24 +33,13 @@
 
 	<article>
 		<center>
-			<dl>
-				<dt><h2>Dawg Pizza</h2></dt>
-				<dd>Awesome wood-fired pizza with fresh ingredients baked to order. Come in and eat, or call us for delivery!</dd>
-			</dl>
+			<h2>About Dawg Pizza</h2>
 		</center>
 
 		<section>
-			<h3>Open: 10:00am to 11:00pm, Monday-Saturday</h3>
+			
 		</section>
-		<section>
-			<h3>How to reach us:</h3>
-			<ul>
-				<li>Call us: 206-555-1212</li>
-				<li>Show up at our place: <a href="http://goo.gl/maps/Jvols">4306 University Way NE, Seattle, WA 98105</a></li>
-				<li>Email us: <a href="mailto:dawgpizzaseattle@gmail.com">dawgpizzaseattle@gmail.com</a></li>
-				<li>Follow us on twitter: <a href="https://twitter.com/DawgPizzaSea">@DawgPizzaSea</a></li>
-			</ul>
-		</section>
+
 		<footer>
 			<ul>
 				<li>© Dawg Pizza 2013</li>
